# rostel_task2

./: .gitignore  README.md  email_sender.py  excel_sheet_reader.py  main.py  pyproject.toml  recruiter_data_params.py
config/: logger.py
config/applications/: Ведущий экономист.xlsx
config/constants/: paths.py  variables.py
